--- a/web/css/f315b8c.css
+++ b/web/css/f315b8c.css
@@ -120,6 +120,7 @@ nav a {
 
 nav a:hover,
 nav a:visited {
+    color: #ed6e64;
     color: #777;
 }
 
@@ -160,8 +161,6 @@ nav a:hover {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-
-
 
 
 
