--- a/src/Telegraf/ChecklistBundle/Resources/views/Default/index.html.twig
+++ b/src/Telegraf/ChecklistBundle/Resources/views/Default/index.html.twig
@@ -3,7 +3,7 @@
  {% block body %}
  	
  	<form role="form">
-	  <div class="form-group">
+	  <div class="form-group checklistForm">
 	    <label for="itemText">Checklist item</label>
 	    <input type="text" class="form-control" id="itemText" placeholder="Enter a task" />
 	  </div>
