--- a/src/Telegraf/ChecklistBundle/Resources/views/Default/item.html.twig
+++ b/src/Telegraf/ChecklistBundle/Resources/views/Default/item.html.twig
@@ -1,9 +1,11 @@
-<li id="item_{{ item.id }}">
+<li class="checklistItem" id="item_{{ item.id }}">
 	<input type="checkbox" class="tickItem" id="is_ticked_{{ item.id }}" {% if item.isTicked %}checked="checked"{% endif %} />
-	<span class="tick" id="is_ticked_{{ item.id }}"></span>
-	{{ item.text }}<br />
-  <a href="#">Edit</a>
-  <a href="#" id="delete_{{ item.id }}" class="deleteItem">Delete</a>
+	<span class="itemText">{{ item.text }}</span>
+  <ul class="itemActions">
+  	<li><a href="#">Edit</a></li>
+  	<li><a href="#" id="delete_{{ item.id }}" class="deleteItem">Delete</a></li>
+  	<li>Created: {{ item.created|date('m/d/y g:i:s a') }}</li>
+  </ul>
 </li>
 
 {% if ajax %}
