--- a/web/css/f315b8c.css
+++ b/web/css/f315b8c.css
@@ -115,17 +115,22 @@ nav a {
     text-decoration: none;
     font-weight: bold;
 
-    color: #999;
+    text-transform: uppercase;
+    font-size: 12px;
 }
 
 nav a:hover,
 nav a:visited {
-    color: #ed6e64;
-    color: #777;
+    color: #555;
+		-webkit-transition: color 300ms ease-in;
+    -moz-transition: color 300ms ease-in;
+    -o-transition: color 300ms ease-in;
+    transition: color 300ms ease-in;
 }
 
 nav a:hover {
-    text-decoration: underline;
+    text-decoration: none;
+    color: #06e;
 }
 
 /* ==============
@@ -162,17 +167,33 @@ nav a:hover {
    Author's custom styles
    ========================================================================== */
 
+.checklistForm label {
+		display: none;
+}
 
+ul#checklistItems {
+		margin: 15px 0;
+		padding: 0;
+}
 
+ul#checklistItems li.checklistItem {
+		list-style: none;
+		margin: 0;
+		padding: 10px 15px;
+		background: #fff;
+		border-bottom: #ccc 1px solid;
+}
 
+ul#checklistItems li.checklistItem ul.itemActions li {
+		list-style: none;
+		display: inline-block;
+		margin: 0 5px;
+		font-size: 12px;
+}
 
-
-
-
-
-
-
-
+ul#checklistItems li.checklistItem ul.itemActions li a {
+		color: #ccc;
+}
 
 /* ==========================================================================
    Media Queries
