Added created, ticked behaviors

--- a/app/Resources/public/css/main.css
+++ b/app/Resources/public/css/main.css
@@ -188,6 +188,10 @@ ul#checklistItems li.checklistItem ul.itemActions li a {
 		color: #ccc;
 }
 
+ul#checklistItems li.checklistItem ul.itemActions li a:hover {
+		color: #999;
+}
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
