--- a/src/Telegraf/ChecklistBundle/Resources/views/Default/item.html.twig
+++ b/src/Telegraf/ChecklistBundle/Resources/views/Default/item.html.twig
@@ -1,10 +1,15 @@
 <li class="checklistItem" id="item_{{ item.id }}">
-	<input type="checkbox" class="tickItem" id="is_ticked_{{ item.id }}" {% if item.isTicked %}checked="checked"{% endif %} />
+	<input type="checkbox" class="tickItem" id="is_ticked_{{ item.id }}" {% if item.ticked is not null %}checked="checked"{% endif %} />
 	<span class="itemText">{{ item.text }}</span>
   <ul class="itemActions">
   	<li><a href="#">Edit</a></li>
   	<li><a href="#" id="delete_{{ item.id }}" class="deleteItem">Delete</a></li>
-  	<li>Created: {{ item.created|date('m/d/y g:i:s a') }}</li>
+  	{% if item.created is not empty %}
+  		<li>Created: {{ item.created|date("m/d/y g:i:s a") }}</li>
+  	{% endif %}  	
+  	{% if item.ticked is not empty %}
+  		<li>Completed: {{ item.ticked|date("m/d/y g:i:s a") }}</li>
+  	{% endif %}
   </ul>
 </li>
 
