Improved login/join form, etc.

--- a/src/Telegraf/ChecklistBundle/Resources/views/Security/register.html.twig
+++ b/src/Telegraf/ChecklistBundle/Resources/views/Security/register.html.twig
@@ -2,10 +2,8 @@
 
 {% block body %}
 
-<form action="{{ path('createUser')}}" method="post" {{ form_enctype(form) }}>
+<form role="form" action="{{ path('createUser')}}" method="post" {{ form_enctype(form) }}>
   {{ form_widget(form) }}
-
-  <input type="submit" />
 </form>
 
 {% endblock %}
