--- a/app/Resources/public/css/main.css
+++ b/app/Resources/public/css/main.css
@@ -86,7 +86,17 @@ body {
 .main aside {
 }
 
-.title {
+.title a {
+		color: #555;
+}
+
+.title a:hover {
+		-webkit-transition: color 300ms ease-in;
+    -moz-transition: color 300ms ease-in;
+    -o-transition: color 300ms ease-in;
+    transition: color 300ms ease-in;
+    text-decoration: none;
+    color: #06e;
 }
 
 /* ==============
@@ -98,29 +108,24 @@ nav ul {
     padding: 0;
 }
 
-nav a {
+nav a,
+nav a:visited {
     display: block;
     margin-bottom: 10px;
     padding: 15px 0;
-
     text-align: center;
     text-decoration: none;
     font-weight: bold;
-
     text-transform: uppercase;
     font-size: 12px;
+    color: #555;
 }
 
-nav a:hover,
-nav a:visited {
-    color: #555;
+nav a:hover {
 		-webkit-transition: color 300ms ease-in;
     -moz-transition: color 300ms ease-in;
     -o-transition: color 300ms ease-in;
     transition: color 300ms ease-in;
-}
-
-nav a:hover {
     text-decoration: none;
     color: #06e;
 }
