--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -24,7 +24,7 @@
 
         <div class="header-container">
             <header class="wrapper clearfix">
-                <h1 class="title">Checklist</h1>
+                <h1 class="title"><a href="{{ path('homepage') }}">ü</a></h1>
                 <nav>
                     <ul>
                         {% if app.user %}
