--- a/src/Telegraf/ChecklistBundle/Resources/views/Security/login.html.twig
+++ b/src/Telegraf/ChecklistBundle/Resources/views/Security/login.html.twig
@@ -6,20 +6,17 @@
     <div>{{ error.message }}</div>
 {% endif %}
 
-<form action="{{ path('login_check') }}" method="post">
-    <label for="username">Username:</label>
-    <input type="text" id="username" name="_username" value="{{ last_username }}" />
+<form role="form" action="{{ path('login_check') }}" method="post">
+	<div class="form-group">
+    <label for="username">Username</label>
+    <input type="text" class="form-control" id="username" name="_username" value="{{ last_username }}" />
+	</div>
+	<div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" id="password" name="_password" />
+	</div>
 
-    <label for="password">Password:</label>
-    <input type="password" id="password" name="_password" />
-
-    {#
-        If you want to control the URL the user
-        is redirected to on success (more details below)
-        <input type="hidden" name="_target_path" value="/account" />
-    #}
-
-    <button type="submit">login</button>
+  <button type="submit" class="btn btn-default">Sign in</button>
 </form>
 
 {% endblock %}
