--- a/src/Telegraf/ChecklistBundle/Resources/views/Form/fields.html.twig
+++ b/src/Telegraf/ChecklistBundle/Resources/views/Form/fields.html.twig
@@ -9,3 +9,13 @@
     </div>
 {% endspaceless %}
 {% endblock form_row %}
+
+{% block form_row %}
+{% spaceless %}
+    <div>
+        {{ form_label(form) }}
+        <div class="alert alert-danger">{{ form_errors(form) }}</div>
+        {{ form_widget(form) }}
+    </div>
+{% endspaceless %}
+{% endblock form_row %}
