--- a/src/Telegraf/ChecklistBundle/Resources/views/Security/login.html.twig
+++ b/src/Telegraf/ChecklistBundle/Resources/views/Security/login.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
 
 {% if error %}
-    <div>{{ error.message }}</div>
+    <div class="alert alert-danger">{{ error.message }}</div>
 {% endif %}
 
 <form role="form" action="{{ path('login_check') }}" method="post">
