Updated css, simplified default controller

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -22,24 +22,20 @@
             <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
         <![endif]-->
 
-        <div class="header-container">
-            <header class="wrapper clearfix">
-                <h1 class="title"><a href="{{ path('homepage') }}">...</a></h1>
-                <nav>
-                    <ul>
-                        {% if app.user %}
-                            <li><a href="{{ path('homepage') }}">Checklists</a></li>
-                            <li><a href="{{ path('fos_user_profile_show') }}">Profile</a></li>
-                            <li><a href="{{ path('fos_user_profile_edit') }}">Edit profile</a></li>
-                            <li><a href="{{ path('fos_user_security_logout') }}">Sign out</a></li>
-                         {% else %}
-                            <li><a href="{{ path('fos_user_registration_register') }}">Join</a></li>
-                            <li><a href="{{ path('fos_user_security_login') }}">Sign in</a></li>
-                         {% endif %}
-                    </ul>
-                </nav>
-            </header>
-        </div>
+
+        <nav>
+            <ul>
+ 		            		<li><a href="{{ path('homepage') }}">Checklists</a></li>
+                {% if app.user %}
+                    <li><a href="{{ path('fos_user_profile_show') }}">Profile</a></li>
+                    <li><a href="{{ path('fos_user_profile_edit') }}">Edit profile</a></li>
+                    <li><a href="{{ path('fos_user_security_logout') }}">Sign out</a></li>
+                 {% else %}
+                    <li><a href="{{ path('fos_user_registration_register') }}">Join</a></li>
+                    <li><a href="{{ path('fos_user_security_login') }}">Sign in</a></li>
+                 {% endif %}
+            </ul>
+        </nav>
 
         <div class="main-container">
             <div class="main wrapper clearfix">
@@ -55,7 +51,11 @@
             </footer>
         </div>
 
-        {% javascripts %}
+        {% javascripts
+            '../app/Resources/public/js/jquery-1.10.2.min.js'
+            '../app/Resources/public/js/bootstrap.min.js'
+            '../app/Resources/public/js/modernizr-2.6.2-respond-1.1.0.min.js'
+            '../app/Resources/public/js/*' %}
             <script src="{{ asset_url }}" type="text/javascript"></script>
         {% endjavascripts %}
         {% block javascripts %}{% endblock %}
