--- a/app/Resources/public/css/main.css
+++ b/app/Resources/public/css/main.css
@@ -62,20 +62,17 @@ textarea {
 
 body {
     font: 16px/26px Helvetica, Helvetica Neue, Arial;
-    background-color: #edeeef;
+    background-color: #fff;
 }
 
 .wrapper {
-    width: 90%;
-    margin: 0 5%;
+    width: 100%;
+    margin: 0 0 0 280px;
 }
 
 /* ===================
     ALL: Theme
    =================== */
-
-.header-container {
-}
 
 .footer-container,
 .main aside {
@@ -102,23 +99,32 @@ body {
 /* ==============
     MOBILE: Menu
    ============== */
+   
+nav {
+		position: fixed;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 280px;
+		background-color: #191918;
+		color: #fff;
+}
 
 nav ul {
-    margin: 0;
+    margin: 25px 0;
     padding: 0;
 }
 
 nav a,
 nav a:visited {
     display: block;
-    margin-bottom: 10px;
-    padding: 15px 0;
-    text-align: center;
+    padding: 7px 35px;
     text-decoration: none;
     font-weight: bold;
     text-transform: uppercase;
     font-size: 12px;
-    color: #555;
+    color: #777;
+    width: 280px;
 }
 
 nav a:hover {
@@ -127,7 +133,8 @@ nav a:hover {
     -o-transition: color 300ms ease-in;
     transition: color 300ms ease-in;
     text-decoration: none;
-    color: #06e;
+    color: #fff;
+    background: #111;
 }
 
 /* ==============
@@ -181,6 +188,11 @@ ul#checklistItems li.checklistItem {
 		border-bottom: #ccc 1px solid;
 }
 
+ul#checklistItems li.checklistItem ul.itemActions {
+		margin: 0 25px;
+		padding: 0;
+}
+
 ul#checklistItems li.checklistItem ul.itemActions li {
 		list-style: none;
 		display: inline-block;
@@ -196,6 +208,10 @@ ul#checklistItems li.checklistItem ul.itemActions li a:hover {
 		color: #999;
 }
 
+ul#checklistItems li.checklistItem .itemText {
+		margin: 0 10px;
+}
+
 /* ==========================================================================
    Media Queries
    ========================================================================== */
@@ -207,18 +223,6 @@ ul#checklistItems li.checklistItem ul.itemActions li a:hover {
    ==================== */
 
     nav a {
-        float: left;
-        margin: 0 1.7%;
-        padding: 25px 2%;
-        margin-bottom: 0;
-    }
-
-    nav li:first-child a {
-        margin-left: 0;
-    }
-
-    nav li:last-child a {
-        margin-right: 0;
     }
 
 /* ========================
@@ -254,8 +258,6 @@ ul#checklistItems li.checklistItem ul.itemActions li a:hover {
     }
 
     nav {
-        float: right;
-        width: 60%;
     }
 
 /* ============
@@ -280,8 +282,6 @@ ul#checklistItems li.checklistItem ul.itemActions li a:hover {
    =============== */
 
     .wrapper {
-        width: 1026px; /* 1140px - 10% for margins */
-        margin: 0 auto;
     }
 }
 
