--- a/src/Telegraf/ChecklistBundle/Resources/views/Form/fields.html.twig
+++ b/src/Telegraf/ChecklistBundle/Resources/views/Form/fields.html.twig
@@ -9,3 +9,10 @@
     </div>
 {% endspaceless %}
 {% endblock form_row %}
+
+{% block form_widget_simple %}
+{% spaceless %}
+    {% set type = type|default('text') %}
+    <input type="{{ type }}" {{ block('widget_attributes') }} {% if attr is empty %}class="form-control" {% endif %} {% if value is not empty %}value="{{ value }}" {% endif %}/>
+{% endspaceless %}
+{% endblock form_widget_simple %}
