--- a/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/register_content.html.twig
@@ -3,6 +3,6 @@
 <form role="form" action="{{ path('fos_user_registration_register') }}" {{ form_enctype(form) }} method="POST" class="fos_user_registration_register">
     {{ form_widget(form) }}
     <div>
-        <input class="btn btn-default" type="submit" value="{{ 'registration.submit'|trans }}" />
+        <input class="btn btn-default" type="submit" value="Join" />
     </div>
 </form>
