--- a/app/Resources/FOSUserBundle/views/Security/login.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login.html.twig
@@ -16,7 +16,7 @@
 	</div>
 	
 	<div class="form-group">
-    <label for="password">{{ 'security.login.password'|trans }}</label> <a href="{{ path('fos_user_resetting_request') }}">Forgot password?</a>
+    <label for="password">{{ 'security.login.password'|trans }}</label>
     <input type="password" class="form-control" id="password" name="_password" required="required" />
 	</div>
 	
@@ -31,5 +31,11 @@
   <input class="btn btn-default right" type="submit" id="_submit" name="_submit" value="Sign in" />
 </form>
 
+<div class="row">
+	<a href="{{ path('fos_user_resetting_request') }}">Forgot password?</a>
+</div>
+<div class="row">
+	New here? <a href="{{ path('fos_user_registration_register') }}">Join now</a>
+</div>
 
 {% endblock fos_user_content %}
