--- a/app/Resources/FOSUserBundle/views/ChangePassword/changePassword_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/changePassword_content.html.twig
@@ -1,8 +1,13 @@
 {% trans_default_domain 'FOSUserBundle' %}
 
-<form action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password">
+<h1>Settings</h1>
+
+<ul class="nav nav-tabs">
+  <li><a href="{{ path('fos_user_profile_edit') }}">Profile</a></li>
+  <li class="active"><a href="{{ path('fos_user_change_password') }}">Password</a></li>
+</ul>
+
+<form role="form" action="{{ path('fos_user_change_password') }}" {{ form_enctype(form) }} method="POST" class="fos_user_change_password">
     {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'change_password.submit'|trans }}" />
-    </div>
+    <input class="btn btn-default" type="submit" value="{{ 'change_password.submit'|trans }}" />
 </form>
